--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -6,7 +6,23 @@
     <title>Rockus</title>
     <meta name="description" content="just another react + webpack boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!--  THE STYLESHEET LINK BELOW NOT WORKING.  NEED TO FIX IN WEBPACK -->
+    <link rel="stylesheet" type="text/css" href="bootstrap_custom.txt">
+    <style>
+      .navbar-custom {
+        background-color: #8A74A2; 
+      }
+
+      .navbar {
+        margin-bottom: 0;
+      }
+
+      a.nav-link {
+        color: black;
+      }
+    </style>        
   </head>
   <body>
     <div id="root"></div>
