add some css styling

--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -22,9 +22,13 @@
       a.nav-link {
         color: black;
       }
+
+      .body-class {
+        background-color: #222;
+      }
     </style>        
   </head>
-  <body>
+  <body class="body-class">
     <div id="root"></div>
   </body>
 </html>
