save bootstrap in project and set up webpack configs to move it to dist directory during build

--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -6,27 +6,9 @@
     <title>Rockus</title>
     <meta name="description" content="just another react + webpack boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./bootstrap_custom.css">       
     <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
-    <!--  THE STYLESHEET LINK BELOW NOT WORKING.  NEED TO FIX IN WEBPACK -->
-    <link rel="stylesheet" type="text/css" href="bootstrap_custom.txt">
-    <style>
-      .navbar-custom {
-        background-color: #8A74A2; 
-      }
-
-      .navbar {
-        margin-bottom: 0;
-      }
-
-      a.nav-link {
-        color: black;
-      }
-
-      .body-class {
-        background-color: #222;
-      }
-    </style>        
   </head>
   <body class="body-class">
     <div id="root"></div>
